--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 * {
-  font-family: sans-serif;
+  font-family: Helvetica, sans-serif;
   font-weight: lighter;
   margin: 0;
   padding: 0;
@@ -16,6 +16,8 @@
 
     li {
       color: #9C9C9C;
+      font-size: 14px;
+      letter-spacing: .5px;
       list-style-type: none;
       padding-bottom: 8px;
       user-select: none;
@@ -44,7 +46,7 @@
     width: 1px;
 
     &.transition {
-      transition: width 1s, left 1s;
+      transition: width .5s, left .5s;
       transition-timing-function: ease;
     }
   }
